apps/dev/bioapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bioapi-swagger
  namespace: sofi
spec:
  ingressClassName: traefik
  rules:
    - host: dev2.sofi-platform.dk
      http:
        paths:
          - backend:
              service:
                name: bioapi
                port:
                  number: 8000
            path: /docs
            pathType: Prefix
  tls:
    - hosts:
        - dev2.sofi-platform.dk
      secretName: dev2.sofi-platform.dk-tls
